--- a/templates/index.html
+++ b/templates/index.html
@@ -11,28 +11,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
 </head>
 <body>
-    <div class="app-header">
-        <div class="logo-container">
-            <img src="{{ url_for('static', filename='images/echomail-logo.png') }}" alt="EchoMail Logo" class="logo">
-            <span class="logo-text">EchoMail</span>
-        </div>
-
-        <!-- Hamburger Button for Mobile -->
-        <button class="navbar-toggle" id="navbarToggle">
-            <i class="fas fa-bars"></i>
-        </button>
-
-        <nav class="main-nav" id="navbarLinks">
-            <ul>
-                <li class="active"><a href="{{ url_for('index') }}"><i class="fas fa-home"></i> Home</a></li>
-                <li><a href="{{ url_for('upload_page') }}"><i class="fas fa-upload"></i> Upload</a></li>
-                <li><a href="{{ url_for('history_page') }}"><i class="fas fa-history"></i> History</a></li>
-                {% if session.get('email') %}
-                    <li><a href="{{ url_for('logout') }}" class="btn-logout"><i class="fas fa-sign-out-alt"></i> Logout</a></li>
-                {% endif %}
-            </ul>
-        </nav>
-    </div>
+    {% include 'header.html' %}
     
     <div class="container">
         <header>
