--- a/templates/login.html
+++ b/templates/login.html
@@ -131,7 +131,7 @@
     <div class="login-container">
         <img src="{{ url_for('static', filename='images/echomail-logo.png') }}" alt="EchoMail Logo" class="login-logo">
         <div class="login-title">EchoMail</div>
-        <div class="login-welcome">Welcome! Please sign in to continue.</div>
+        <div class="login-welcome">Welcome! Please log in to continue.</div>
         
         <!-- Flash Messages -->
         {% with messages = get_flashed_messages(with_categories=true) %}
